# cpp_yahoo_scraper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  header.txt
data/: AAPL_call_chain.csv  AAPL_historical.csv  AAPL_put_chain.csv  BRK-A_historical.csv  BRK-B_call_chain.csv  BRK-B_historical.csv  BRK-B_put_chain.csv  GOOG_call_chain.csv  GOOG_historical.csv  GOOG_put_chain.csv  META_call_chain.csv  META_historical.csv  META_put_chain.csv  NVDA_call_chain.csv  NVDA_historical.csv  NVDA_put_chain.csv  RTX2023-12-07_2023-12-09_1d.csv  RTX2023-12-11_2023-12-13_15m.csv  RTX2023-12-12_2023-12-13_15m.csv  RTX2023-12-14_2023-12-13_15m.csv  RTX_call_chain.csv  RTX_historical.csv  RTX_put_chain.csv  TSLA2023-12-07_2023-12-09_2m.csv  TSLA_call_chain.csv  TSLA_historical.csv  TSLA_put_chain.csv  ^SPX_historical.csv
data/RTX/2023-12-05_2023-12-07_30m.csv/: 2023-12-05_2023-12-07_30m.csv
include/: csv_funcs.hpp  mainwindow.h  timefuncs.hpp  yahoo_options.hpp  yahoo_stocks.hpp
include/UI/: mainwindow.h
include/mongo/: connect.hpp
include/yahoo/: options.hpp  stocks.hpp
scripts/: compile.sh  recomp.sh  recomp_all.sh  run.sh
src/: main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave
src/UI/: mainwindow.cpp
tests/: eigenTest.cpp  mongoTest.cpp  mongoTest.txt  test1.cpp  testHeader.h  test_main.cpp  urtTest.cpp
